Fix border radius on mobile view

--- a/css/blog.css
+++ b/css/blog.css
@@ -170,6 +170,10 @@
 
 @media only screen and (max-width: 767px) {
 
+	#publication-tabs .active {
+		border-radius: 0;
+	}
+
 	.post-area {
 		padding: 40px 10px;
 		text-align: justify;
